@@ -4,8 +4,10 @@ import nz.ac.canterbury.seng302.gardenersgrove.entity.FriendRequest;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.User;
 import nz.ac.canterbury.seng302.gardenersgrove.friends.SearchedUserResult;
 import nz.ac.canterbury.seng302.gardenersgrove.repository.FriendRequestRepository;
+import nz.ac.canterbury.seng302.gardenersgrove.repository.FriendshipRepository;
 import nz.ac.canterbury.seng302.gardenersgrove.repository.UserRepository;
 import nz.ac.canterbury.seng302.gardenersgrove.service.FriendRequestService;
+import nz.ac.canterbury.seng302.gardenersgrove.service.FriendshipService;
 import nz.ac.canterbury.seng302.gardenersgrove.service.UserService;
 import nz.ac.canterbury.seng302.gardenersgrove.utility.Status;
 import org.junit.jupiter.api.Assertions;
@@ -15,7 +17,6 @@ import org.mockito.Mockito;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -25,7 +26,8 @@ import static org.mockito.Mockito.when;
 class UserServiceFriendTest {
     private UserRepository userRepositoryMock;
     private UserService userService;
-
+    private FriendshipService friendshipService;
+    private FriendshipRepository friendshipRepository;
     private FriendRequestService friendRequestService;
 
     private FriendRequestRepository friendRequestRepositoryMock;
@@ -43,6 +45,8 @@ class UserServiceFriendTest {
     void setUp() {
         userRepositoryMock = Mockito.mock(UserRepository.class);
         friendRequestRepositoryMock = Mockito.mock(FriendRequestRepository.class);
+        friendshipRepository = Mockito.mock(FriendshipRepository.class);
+        friendshipService = new FriendshipService(friendshipRepository);
         userService = new UserService(userRepositoryMock);
         friendRequestService = new FriendRequestService(friendRequestRepositoryMock);
 
@@ -74,11 +78,11 @@ class UserServiceFriendTest {
     @Test
     void searchUser_searchPendingFriendByEmail_returnSearchedUser() {
         when(friendRequestRepositoryMock.findFriendRequestBySenderAndReceiver(any(), any()))
-                .thenReturn(Arrays.asList(new FriendRequest(loggedInUser, pendingRequestUser)));
+                .thenReturn(List.of(new FriendRequest(loggedInUser, pendingRequestUser)));
 
 
         List<SearchedUserResult> actualSearchedResults = userService.getSearchedUserAndFriendStatus(
-                pendingRequestUser.getEmail(), loggedInUser, friendRequestService);
+                pendingRequestUser.getEmail(), loggedInUser, friendRequestService, friendshipService);
 
         Assertions.assertEquals(1, actualSearchedResults.size());
         Assertions.assertEquals(pendingRequestUser, actualSearchedResults.getFirst().getUser());
@@ -90,10 +94,10 @@ class UserServiceFriendTest {
         FriendRequest mockedRequest = new FriendRequest(loggedInUser, friendUser);
         mockedRequest.setStatus(Status.FRIENDS);
         when(friendRequestRepositoryMock.findFriendRequestBySenderAndReceiver(any(), any()))
-                .thenReturn(Arrays.asList(mockedRequest));
+                .thenReturn(List.of(mockedRequest));
 
         List<SearchedUserResult> actualSearchedResults = userService.getSearchedUserAndFriendStatus(
-                friendUser.getEmail(), loggedInUser, friendRequestService);
+                friendUser.getEmail(), loggedInUser, friendRequestService, friendshipService);
 
         Assertions.assertEquals(1, actualSearchedResults.size());
         Assertions.assertEquals(friendUser, actualSearchedResults.getFirst().getUser());
@@ -105,10 +109,10 @@ class UserServiceFriendTest {
         FriendRequest mockedRequest = new FriendRequest(loggedInUser, declinedRequestUser);
         mockedRequest.setStatus(Status.DECLINED);
         when(friendRequestRepositoryMock.findFriendRequestBySenderAndReceiver(any(), any()))
-                .thenReturn(Arrays.asList(mockedRequest));
+                .thenReturn(List.of(mockedRequest));
 
         List<SearchedUserResult> actualSearchedResults = userService.getSearchedUserAndFriendStatus(
-                declinedRequestUser.getEmail(), loggedInUser, friendRequestService);
+                declinedRequestUser.getEmail(), loggedInUser, friendRequestService, friendshipService);
 
         Assertions.assertEquals(1, actualSearchedResults.size());
         Assertions.assertEquals(declinedRequestUser, actualSearchedResults.getFirst().getUser());
@@ -118,11 +122,11 @@ class UserServiceFriendTest {
     @Test
     void searchUser_searchByName_singleResult_returnSearchedUser() {
         when(friendRequestRepositoryMock.findFriendRequestBySenderAndReceiver(any(), any()))
-                .thenReturn(Arrays.asList(new FriendRequest(loggedInUser, pendingRequestUser)));
+                .thenReturn(List.of(new FriendRequest(loggedInUser, pendingRequestUser)));
 
 
         List<SearchedUserResult> actualSearchedResults = userService.getSearchedUserAndFriendStatus(
-                pendingRequestUser.getName(), loggedInUser, friendRequestService);
+                pendingRequestUser.getName(), loggedInUser, friendRequestService, friendshipService);
 
         Assertions.assertEquals(1, actualSearchedResults.size());
         Assertions.assertEquals(pendingRequestUser, actualSearchedResults.getFirst().getUser());
@@ -131,11 +135,11 @@ class UserServiceFriendTest {
     @Test
     void searchUser_searchByNameUser_multipleResults_returnSearchedUsers() {
         when(friendRequestRepositoryMock.findFriendRequestBySenderAndReceiver(any(), any()))
-                .thenReturn(Arrays.asList(new FriendRequest(loggedInUser, userSameName1)));
+                .thenReturn(List.of(new FriendRequest(loggedInUser, userSameName1)));
 
 
         List<SearchedUserResult> actualSearchedResults = userService.getSearchedUserAndFriendStatus(
-                userSameName1.getName(), loggedInUser, friendRequestService);
+                userSameName1.getName(), loggedInUser, friendRequestService, friendshipService);
 
         Assertions.assertEquals(2, actualSearchedResults.size());
         Assertions.assertEquals(userSameName1, actualSearchedResults.get(0).getUser());
@@ -145,11 +149,11 @@ class UserServiceFriendTest {
     @Test
     void searchUser_searchByPartialName_returnNoSearchedUsers() {
         when(friendRequestRepositoryMock.findFriendRequestBySenderAndReceiver(any(), any()))
-                .thenReturn(Arrays.asList(new FriendRequest(loggedInUser, pendingRequestUser)));
+                .thenReturn(List.of(new FriendRequest(loggedInUser, pendingRequestUser)));
 
 
         List<SearchedUserResult> actualSearchedResults = userService.getSearchedUserAndFriendStatus(
-                pendingRequestUser.getFirstName(), loggedInUser, friendRequestService);
+                pendingRequestUser.getFirstName(), loggedInUser, friendRequestService, friendshipService);
 
         Assertions.assertEquals(0, actualSearchedResults.size());
     }
@@ -157,11 +161,11 @@ class UserServiceFriendTest {
     @Test
     void searchUser_searchByPartialEmail_returnNoSearchedUsers() {
         when(friendRequestRepositoryMock.findFriendRequestBySenderAndReceiver(any(), any()))
-                .thenReturn(Arrays.asList(new FriendRequest(loggedInUser, pendingRequestUser)));
+                .thenReturn(List.of(new FriendRequest(loggedInUser, pendingRequestUser)));
 
 
         List<SearchedUserResult> actualSearchedResults = userService.getSearchedUserAndFriendStatus(
-                "@gmail.com", loggedInUser, friendRequestService);
+                "@gmail.com", loggedInUser, friendRequestService, friendshipService);
 
         Assertions.assertEquals(0, actualSearchedResults.size());
     }
@@ -169,7 +173,7 @@ class UserServiceFriendTest {
     @Test
     void searchUser_searchSelfByEmail_returnSelf() {
         List<SearchedUserResult> actualSearchedResults = userService.getSearchedUserAndFriendStatus(
-                loggedInUser.getEmail(), loggedInUser, friendRequestService);
+                loggedInUser.getEmail(), loggedInUser, friendRequestService, friendshipService);
 
         Assertions.assertEquals(1, actualSearchedResults.size());
         Assertions.assertEquals(loggedInUser, actualSearchedResults.getFirst().getUser());
